@@ -185,6 +185,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 23740) Article::doRedirect() now use $extraQuery parameter correctly if
   the $noRedir parameter is set to true
 * (bug 23688) Correct mime types for Office 2007 OpenXML documents.
+* (bug 23787) Corrected $wgDefaultSkin's comment in DefaultSettings.php
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
